<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:padding="20dp"
                android:text="@string/second_hand_store"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="ImageNotFound"
                android:src="@drawable/image1"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:padding="15dp"
                android:text="@string/dealing_in_second_hand_furniture"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white"
                android:textStyle="italic"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:fontFamily="serif-monospace"
                android:padding="5dp"
                android:text="@string/servicesProviding"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:fontFamily="serif-monospace"
                android:padding="5dp"
                android:text="@string/anotherService"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:padding="15dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/contact_us"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/background_light"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:fontFamily="serif-monospace"
                android:padding="10dp"
                android:textSize="15sp"
                android:text="@string/address"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:fontFamily="serif-monospace"
                android:padding="10dp"
                android:textSize="15sp"
                android:text="@string/officeTimings"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:fontFamily="serif-monospace"
                android:padding="10dp"
                android:textSize="15sp"
                android:text="@string/mobileNo"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:fontFamily="serif-monospace"
                android:padding="10dp"
                android:textSize="15sp"
                android:text="@string/website"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>